// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly renders correctly when disabled 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper disabled monday-style-toggle_wrapper--disabled"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={true}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when labels are hidden 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by default selected (off)  1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={false}
    checked={false}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle dummy-class-name notSelected monday-style-toggle_toggle--not-selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by default selected (on)  1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle dummy-class-name selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by isSelected (off) 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={false}
    checked={false}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle dummy-class-name notSelected monday-style-toggle_toggle--not-selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly when selection defined by isSelected (on) 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle dummy-class-name selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with aria controls 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    aria-controls="aria controls"
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with empty props 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with not default offOverrideText 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    TestOff
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    On
  </span>
</label>
`;

exports[`Toggle renders correctly renders correctly with not default onOverrideText 1`] = `
<label
  className="wrapper monday-style-toggle_wrapper"
>
  <input
    aria-checked={true}
    checked={true}
    className="hidden-switch monday-style-toggle_input"
    disabled={false}
    onChange={[Function]}
    role="switch"
    type="checkbox"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    Off
  </span>
  <div
    aria-hidden="true"
    className="toggle monday-style-toggle_toggle selected monday-style-toggle_toggle--selected"
    data-testid="mock-toggle"
  />
  <span
    className="text monday-style-toggle_text"
    data-testid="toggle-text"
  >
    TestOn
  </span>
</label>
`;
